--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export(downsample_app)
 export(high_pass_filter_app)
 export(import_wave_app)
 export(multi_meanspectra_app)
-export(multi_meanspectra_static_app)
 export(multioscillo_app)
 export(multiplot_app)
 export(oscillogram_interactive)
@@ -13,7 +12,7 @@ export(oscillogram_zoom_app)
 export(spectral_stats_app)
 export(spectrogram_app)
 export(spectrum_df)
-export(spectrum_plot)
+export(spectrum_plot_app)
 export(spectrum_plotly)
 export(temporal_stats_hq_app)
 export(temporal_stats_lq_app)
@@ -81,6 +80,7 @@ importFrom(shinyBS,bsButton)
 importFrom(shinyBS,bsPopover)
 importFrom(shinycssloaders,withSpinner)
 importFrom(shinyjs,extendShinyjs)
+importFrom(shinyjs,runjs)
 importFrom(shinyjs,useShinyjs)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
