--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(colorcode_oscillogram_app)
 export(downsample_app)
 export(high_pass_filter_app)
 export(import_wave_app)
+export(load_wave_data)
 export(multi_meanspectra_app)
 export(multioscillo_app)
 export(multiplot_app)
@@ -18,6 +19,7 @@ export(temporal_stats_hq_app)
 export(temporal_stats_lq_app)
 export(trim_app)
 export(wave_df)
+import(dplyr)
 import(ggplot2)
 import(patchwork)
 import(shiny)
@@ -34,11 +36,9 @@ importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,lead)
 importFrom(dplyr,mutate)
-importFrom(dplyr,n)
 importFrom(dplyr,pull)
 importFrom(dplyr,relocate)
 importFrom(dplyr,row_number)
-importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(dplyr,tibble)
@@ -88,4 +88,5 @@ importFrom(tidyr,pivot_longer)
 importFrom(tuneR,channel)
 importFrom(tuneR,extractWave)
 importFrom(tuneR,normalize)
+importFrom(warbleR,envelope)
 importFrom(writexl,write_xlsx)
