--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ RoxygenNote: 7.3.2
 Imports:
     shiny (>= 1.0.0),
     shinyjs,
+    shinyBS,
     shinycssloaders,
     ggplot2 (>= 3.0),
     seewave,
