update required package shinyBS

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ import(dplyr)
 import(ggplot2)
 import(patchwork)
 import(shiny)
+import(shinyBS)
 importFrom(DT,DTOutput)
 importFrom(DT,datatable)
 importFrom(DT,renderDT)
@@ -76,8 +77,6 @@ importFrom(seewave,sfm)
 importFrom(seewave,sh)
 importFrom(seewave,spec)
 importFrom(seewave,spectro)
-importFrom(shinyBS,bsButton)
-importFrom(shinyBS,bsPopover)
 importFrom(shinycssloaders,withSpinner)
 importFrom(shinyjs,extendShinyjs)
 importFrom(shinyjs,runjs)
