add non-interactive functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(colorcode_oscillogram_app)
 export(downsample_app)
 export(import_wave_app)
 export(load_wave_data)
+export(meanspectrum_plotly)
 export(multi_meanspectra_app)
 export(multioscillo_app)
 export(multiplot_app)
@@ -12,6 +13,7 @@ export(oscillogram_interactive)
 export(oscillogram_zoom_app)
 export(spectral_stats_app)
 export(spectrogram_app)
+export(spectrogram_plotly)
 export(spectrum_df)
 export(spectrum_plot_app)
 export(spectrum_plotly)
