Unnest internal functions and added non-interactive functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,16 @@ export(meanspectrum_plotly)
 export(multi_meanspectra_app)
 export(multioscillo_app)
 export(multiplot_app)
+export(multiplot_ggplot)
+export(oscillogram_ggplot)
 export(oscillogram_interactive)
 export(oscillogram_zoom_app)
 export(spectral_stats_app)
 export(spectrogram_app)
+export(spectrogram_ggplot)
 export(spectrogram_plotly)
 export(spectrum_df)
+export(spectrum_ggplot)
 export(spectrum_plot_app)
 export(spectrum_plotly)
 export(temporal_stats_hq_app)
@@ -24,6 +28,7 @@ export(wave_df)
 import(dplyr)
 import(ggplot2)
 import(patchwork)
+import(seewave)
 import(shiny)
 import(shinyBS)
 importFrom(DT,DTOutput)
@@ -86,6 +91,7 @@ importFrom(shinyjs,useShinyjs)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,pivot_longer)
+importFrom(tuneR,Wave)
 importFrom(tuneR,channel)
 importFrom(tuneR,extractWave)
 importFrom(tuneR,normalize)
