unnest temporal stats functions
Unnest functions and add temporal and dynamic excursion metrics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(import_wave_app)
 export(load_wave_data)
 export(meanspectrum_plotly)
 export(multi_meanspectra_app)
+export(multi_meanspectra_static_app)
 export(multioscillo_app)
 export(multiplot_app)
 export(multiplot_ggplot)
@@ -21,7 +22,9 @@ export(spectrum_df)
 export(spectrum_ggplot)
 export(spectrum_plot_app)
 export(spectrum_plotly)
+export(temporal_stats_hq)
 export(temporal_stats_hq_app)
+export(temporal_stats_lq)
 export(temporal_stats_lq_app)
 export(trim_app)
 export(wave_df)
@@ -51,6 +54,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
+importFrom(htmlwidgets,onRender)
 importFrom(htmlwidgets,saveWidget)
 importFrom(magrittr,"%>%")
 importFrom(patchwork,plot_layout)
