--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(dplyr,tibble)
 importFrom(dplyr,ungroup)
+importFrom(htmltools,HTML)
 importFrom(htmlwidgets,onRender)
 importFrom(htmlwidgets,saveWidget)
 importFrom(magrittr,"%>%")
@@ -99,5 +100,6 @@ importFrom(tuneR,Wave)
 importFrom(tuneR,channel)
 importFrom(tuneR,extractWave)
 importFrom(tuneR,normalize)
+importFrom(utils,write.csv)
 importFrom(warbleR,envelope)
 importFrom(writexl,write_xlsx)
